# next-at

.github/workflows/: build_image.yml
backend/: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  build.rs
backend/docs/: gtfs_erd.md
backend/docs/examples/: realtime.json
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  raw.rs
backend/migration/src/sql/: 000001_gtfs_tables.sql  000002_realtime.sql  000004_stop_time_index_indexes.sql
backend/migration/src/sql/000003_stop_time_index_table/: down.sql  up.sql
backend/src/: entities.rs  error.rs  geo.rs  main.rs  maintenance.rs  stops.rs  test_utils.rs
backend/src/at/: client.rs  entities.rs  error.rs  mod.rs
backend/src/db/: error.rs  links.rs  mod.rs  util.rs  util_old.rs
backend/src/db/queries/: stop_arrivals.sql
backend/src/entity/: README.md
backend/src/gtfs/: index.rs  mod.rs  reader_old.rs  sync.rs  sync_old.rs  utils.rs
backend/src/gtfs/realtime/: alert.rs  error.rs  mod.rs  trip_update.rs  utils.rs  vehicle.rs
backend/src/gtfs/structure/: enums.rs  mod.rs  objects.rs  realtime.rs  serde_helpers.rs
