[package]
name = "next-at-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
actix-web = "4.5.1"
async-stream = "0.3.5"
async_zip = { version = "0.0.17", default-features = false, features = ["deflate"] }
chrono = "0.4.35"
chrono-tz = "0.8.6"
derivative = "2.2.0"
derive_builder = { version = "0.20.0", features = ["clippy"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
geo = "0.28.0"
itertools = "0.12.1"
log = "0.4.21"
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.30.0", features = ["bundled", "csvtab", "serde_json"] }
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "debug-print", "with-json"] }
migration = { path = "./migration" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["compat"] }
url = "2.5.0"
futures-util = "0.3.30"
sqlx = { version = "0.7.4", default-features = false, features = ["sqlx-sqlite"] }
actix-cors = "0.7.0"

[build-dependencies]
regex = "1.10.3"
sea-orm-cli = "0.12.15"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["rt"] }
